plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.sohwakmo'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Thymeleaf에 layout 기능을 추가하기 위해서.
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.1.0'

	// 인증 메일 발송
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'javax.mail:javax.mail-api:1.6.2'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Thymeleaf의 Spring Security 확장 기능
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
	
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools:2.7.5'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
	// Spring Security Test
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
